--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~5.1.1",
     "@coreui/utils": "^2.0.2",
+    "@sweetalert2/ngx-sweetalert2": "^12.3.0",
     "chart.js": "^4.4.3",
     "lodash-es": "^4.17.21",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.1",
+    "sweetalert2": "^11.11.0",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.6"
   },
