--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "strictPropertyInitialization": false,
+    "strict": false,
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
