--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/compiler": "^17.3.10",
     "@angular/core": "^17.3.10",
     "@angular/forms": "^17.3.10",
+    "@angular/google-maps": "^17.3.10",
     "@angular/language-service": "^17.3.10",
     "@angular/platform-browser": "^17.3.10",
     "@angular/platform-browser-dynamic": "^17.3.10",
