--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~5.1.1",
     "@coreui/utils": "^2.0.2",
+    "angular-smart-table": "^2.1.11",
     "chart.js": "^4.4.3",
     "lodash-es": "^4.17.21",
     "ngx-scrollbar": "^13.0.3",
