--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "angular-smart-table": "^2.1.11",
     "chart.js": "^4.4.3",
     "lodash-es": "^4.17.21",
+    "ngx-pagination": "^6.0.3",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.1",
     "sweetalert2": "^11.11.0",
