--- a/package.json
+++ b/package.json
@@ -37,12 +37,17 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~5.1.1",
     "@coreui/utils": "^2.0.2",
+    "@stomp/ng2-stompjs": "^8.0.0",
+    "@stomp/stompjs": "^7.0.0",
     "angular-smart-table": "^2.1.11",
     "chart.js": "^4.4.3",
+    "install": "^0.13.0",
     "lodash-es": "^4.17.21",
     "ngx-pagination": "^6.0.3",
     "ngx-scrollbar": "^13.0.3",
+    "npm": "^10.8.1",
     "rxjs": "~7.8.1",
+    "sockjs-client": "^1.6.1",
     "sweetalert2": "^11.11.0",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.6"
@@ -55,6 +60,7 @@
     "@types/jasmine": "^5.1.4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.12.12",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "^5.1.2",
     "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
