--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.10",
     "@angular/localize": "^17.3.10",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "^5.1.4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.12.12",
