--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@stomp/stompjs": "^7.0.0",
     "angular-smart-table": "^2.1.11",
     "chart.js": "^4.4.3",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
+    "jspdf": "^2.5.1",
     "lodash-es": "^4.17.21",
     "ngx-pagination": "^6.0.3",
     "ngx-scrollbar": "^13.0.3",
