--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lodash-es": "^4.17.21",
     "ngx-pagination": "^6.0.3",
     "ngx-scrollbar": "^13.0.3",
