--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "install": "^0.13.0",
     "jspdf": "^2.5.1",
     "lodash-es": "^4.17.21",
+    "moment": "^2.30.1",
+    "ngx-moment": "^6.0.2",
     "ngx-pagination": "^6.0.3",
     "ngx-scrollbar": "^13.0.3",
     "npm": "^10.8.1",
