--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@stomp/ng2-stompjs": "^8.0.0",
     "@stomp/stompjs": "^7.0.0",
     "angular-smart-table": "^2.1.11",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
