--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "^5.1.4",
     "@types/lodash-es": "^4.17.12",
+    "@types/moment": "^2.13.0",
     "@types/node": "^20.12.12",
     "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "^5.1.2",
