--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "angular-smart-table": "^2.1.11",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "howler": "^2.2.4",
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "jspdf": "^2.5.1",
@@ -64,6 +65,7 @@
     "@angular/compiler-cli": "^17.3.10",
     "@angular/localize": "^17.3.10",
     "@types/googlemaps": "^3.43.3",
+    "@types/howler": "^2.2.11",
     "@types/jasmine": "^5.1.4",
     "@types/lodash-es": "^4.17.12",
     "@types/moment": "^2.13.0",
