--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -15,7 +15,7 @@ http {
     # Configuración del servidor HTTP
     server {
         listen 80;
-        server_name localhost;
+        server_name 137.184.65.180;
 
         root   /var/www/app/;
         index index.html;
