--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "coreui-free-angular-admin-template",
-  "version": "5.0.3",
-  "copyright": "Copyright 2024 creativeLabs Łukasz Holeczek",
-  "license": "MIT",
-  "author": "The CoreUI Team (https://github.com/orgs/coreui/people) and contributors",
-  "homepage": "https://coreui.io/angular",
+  "name": "jedank-security",
+  "version": "0.0.1",
+  "copyright": "Copyright 2024 David Guambaña, Ariel Guaman, Frank Barrera y Josias Aldaz",
+  "license": "Consultar archivo LICENSE para más detalles",
+  "author": "David Guambaña, Ariel Guaman, Frank Barrera y Josias Aldaz",
   "config": {
     "theme": "default",
     "coreui_library_short_version": "5.1",
@@ -41,6 +40,7 @@
     "@stomp/stompjs": "^7.0.0",
     "angular-smart-table": "^2.1.11",
     "bootstrap": "^5.3.3",
+    "build": "^0.1.4",
     "chart.js": "^4.4.3",
     "howler": "^2.2.4",
     "html2canvas": "^1.4.1",
