--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,36 +1,34 @@
+server {
+    listen 80;
 
-# Configuración de eventos
-events {
-    worker_connections 1024;
-}
-# Configuración del servidor HTTP
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    
-    # Configuración de logs
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-    
-    # Configuración del servidor HTTP
-    server {
-        listen 80;
-        server_name 137.184.65.180;
+    server_name localhost;
 
-        root   /var/www/app/;
-        index index.html;
-        client_max_body_size 5M;
+    root /var/www/html;  # La raíz del contenido estático o de la aplicación
 
-        location / {        
-            try_files $uri $uri/ /index.html;
-        }
+    index index.html index.htm index.php;
 
-        error_page 404 /404.html;
-        location = /40x.html {
-        }
+    location / {
+        try_files $uri $uri/ =404;
+    }
 
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-        }
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;  # Ajusta la versión PHP si es necesario
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
+
+    # Manejo de errores
+    error_page 404 /404.html;
+    location = /404.html {
+        root /usr/share/nginx/html;
+        internal;
+    }
+
+    # Redirección de errores de acceso a la página de error 500
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+        internal;
     }
 }
